<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="password">Password</string>
    <string name="login_id">Username</string>
    <string name="app_name">Jourwee</string>
    <string name="login">Login</string>
    <string name="register_driver">I\'m a Driver</string>
    <string name="register_rider">I need a ride</string>
    <string name="register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="logoutBtn">Logout</string>
    <string name="test_request">Test Request</string>
    <string name="user_id">User ID</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Welcome to Jourwee!</string>
    <string name="already_have_an_account_sign_in">Already have an account? <b><u>Sign In</u></b></string>
    <string name="error_password">Please enter a password at least six characters long</string>
    <string name="error_email">Please enter a valid email address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty" />
    <string name="create_account">Create Account</string>
    <string name="title_signin">Sign In</string>
    <string name="signin_error">We could not sign you in. Please check your username and password before trying again.</string>
    <string name="error_signin">Error During Sign In</string>
    <string name="ok">Okay</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="rider_route">Find a driver</string>
    <string name="driver_route">Find a rider</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="google_maps_api_key">AIzaSyB1ZwZar2ns4u_6lA_jV2ODr3cpA5hWs5I</string>
    <string name="google_browser_api_key">AIzaSyCoQowbIAVI-hzlKp6kRn4rzJUmVWn_lgs</string>
    <string name="search_hint">Search Places</string>
    <string name="action_search">Search</string>
    <string name="search_settings">Search Places</string>
    <string name="fb_app_id">680303702025885</string>

    <string-array name="locations">
        <item>hello1</item>
        <item>hello2</item>
        <item>hello3</item>
        <item>hello4</item>
        <item>hello5</item>
        <item>hello6</item>
        <item>hello7</item>
        <item>hello8</item>
        <item>hello9</item>
    </string-array>

    <string name="btn_fb_description">Facebook Signin</string>
    <string name="btn_twitter_description">Twitter Signin</string>
    <string name="btn_google_description">Google Signin</string>
    <string name="divider">Divider</string>
    <string name="or">OR</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="action_logout">Logout</string>

</resources>
