<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#27a7df">
	<EditText
		android:id="@+id/passwordTxtBox"
		android:layout_width="210dp"
		android:layout_height="30dp"
		android:layout_alignLeft="@+id/usernameTxtBox"
		android:layout_below="@+id/usernameTxtBox"
		android:layout_marginTop="5dp"
		android:background="#FFFFFF"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:paddingLeft="5dp"
		android:textColor="#27a7df"
		android:textSize="13sp" />
	<Button
		android:id="@+id/regDriverBtn"
		android:layout_width="100dp"
		android:layout_height="38dp"
		android:layout_alignLeft="@+id/passwordTxtBox"
		android:layout_below="@+id/passwordTxtBox"
		android:layout_marginTop="19dp"
		android:background="#2980b9"
		android:text="@string/register_driver"
		android:textColor="#FFFFFF"
		android:textSize="15sp"
		android:textStyle="bold" />
	
	<Button
		android:id="@+id/regRiderBtn"
		android:layout_width="100dp"
		android:layout_height="38dp"
		android:layout_alignBaseline="@+id/regDriverBtn"
		android:layout_alignBottom="@+id/regDriverBtn"
		android:layout_alignRight="@+id/passwordTxtBox"
		android:background="#2980b9"
		android:text="@string/register_rider"
		android:textColor="#FFFFFF"
		android:textSize="15sp"
		android:textStyle="bold" />

	<ImageView
		android:id="@+id/imageView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="46dp"
		android:contentDescription="@string/app_name"
		android:src="@drawable/ic_jourweelogo" />
	<EditText
		android:id="@+id/usernameTxtBox"
		android:layout_width="210dp"
		android:layout_height="30dp"
		android:layout_below="@+id/imageView1"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="28dp"
		android:background="#FFFFFF"
		android:ems="10"
		android:hint="@string/login_id"
		android:inputType="textNoSuggestions"
		android:paddingLeft="5dp"
		android:textColor="#27a7df"
		android:textSize="13sp">
		<requestFocus />
	</EditText>

</RelativeLayout>
