<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#27a7df">
	<TextView
		android:id="@+id/signinTxt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/RegBtn"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="27dp"
		android:text="@string/already_have_an_account_sign_in"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="#FFFFFF"
		android:textSize="12sp" />
	<ImageView
		android:id="@+id/imageView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="184dp"
		android:contentDescription="@string/app_name"
		android:src="@drawable/ic_jourweelogo" />
	<Button
		android:id="@+id/RegBtn"
		android:layout_width="200dp"
		android:layout_height="38dp"
		android:layout_below="@+id/welcomeTxt"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="43dp"
		android:background="#2980b9"
		android:text="@string/register"
		android:textColor="#FFFFFF"
		android:textSize="15sp"
		android:textStyle="bold" />
	<TextView
		android:id="@+id/welcomeTxt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:text="@string/welcome"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="#FFFFFF"
		android:textSize="12sp" />

</RelativeLayout>
