<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	android:background="#ffffffff"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:minus="http://schemas.android.com/apk/res-auto">
	<ImageView
		android:layout_gravity="bottom|center"
		android:padding="0.0dip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="0.0dip"
		android:src="@drawable/welcome_bottom"
		android:contentDescription="@string/empty" />
	<ImageView
		android:layout_gravity="center_horizontal"
		android:id="@id/mascot"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="36.0dip"
		android:src="@drawable/welcome_logo"
		android:contentDescription="@string/app_name" />
	<LinearLayout
		android:gravity="center_horizontal"
		android:layout_gravity="center"
		android:orientation="vertical"
		android:id="@id/buttons"
		android:background="@drawable/welcome_middle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<Button
			android:textSize="20.0sp"
			android:textColor="#ffffffff"
			android:gravity="center"
			android:id="@id/signup"
			android:background="@drawable/btn_button_create_account"
			android:padding="12.0dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="11.0dip"
			android:text="@string/create_account"
			android:onClick="onSignUp" />
		<TextView
			android:id="@id/signin"
			android:paddingBottom="10.0dip"
			android:clickable="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/already_have_an_account_sign_in"
			android:onClick="GotoSignIn" />
		<!-- minus:textHtml="true" 					
			style="@style/Widget.Minus.SubText.NotLogged"-->
	</LinearLayout>
</FrameLayout>