<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	tools:context="Login"
	android:background="#27a7df">

	<!-- Edit Text has 2 attributes that has problems (If we type in something 
		then it wouldnt have any problem)It's trying to delete the words when i focus 
		on it but no words to delete hence indexoutofbound -->

	<ImageView
		android:id="@+id/imageView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="46dp"
		android:contentDescription="@string/app_name"
		android:src="@drawable/ic_jourweelogo" />


	<EditText
		android:id="@+id/loginTxtBox"
		android:layout_width="210dp"
		android:layout_height="30dp"
		android:layout_below="@+id/imageView1"
		android:layout_centerHorizontal="true"
		android:background="@drawable/edittext_rounded_corners"
		android:layout_marginTop="35dp"
		android:hint="@string/login_id"
		android:inputType="textNoSuggestions"
		android:paddingLeft="5dp"
		android:textColor="#27a7df"
		android:textSize="13sp">
		<requestFocus />
	</EditText>
	<Button
		android:id="@+id/loginBtn"
		android:layout_width="200dp"
		android:layout_height="38dp"
		android:layout_alignLeft="@+id/pwTxtBox"
		android:layout_alignRight="@+id/pwTxtBox"
		android:layout_below="@+id/pwTxtBox"
		android:layout_marginTop="19dp"
		android:background="#2980b9"
		android:text="@string/login"
		android:textColor="#FFFFFF"
		android:textSize="15sp"
		android:textStyle="bold" />
	<EditText
		android:id="@+id/pwTxtBox"
		android:layout_width="210dp"
		android:layout_height="30dp"
		android:layout_alignLeft="@+id/loginTxtBox"
		android:layout_below="@+id/loginTxtBox"
		android:layout_marginTop="5dp"
		android:background="@drawable/edittext_rounded_corners"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:paddingLeft="5dp"
		android:textColor="#27a7df"
		android:textSize="13sp" />
</RelativeLayout>